kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.20.81.30.78.nip.io
    secretName: ecommerce-tls
  rules:
  - host: api.20.81.30.78.nip.io 
    http:
      paths:
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /version
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /order-version
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /notif-version
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
      - path: /order-secrets
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
